tests/system/testdata/manifest/apply.txtar
# Graceful handling of a nonexistent manifest file.
ak manifest apply nonexistent.yaml
output equals 'Error: open nonexistent.yaml: no such file or directory'
return code == 10

# Graceful handling of an invalid manifest file.
ak manifest apply invalid.yaml
output equals file invalid_error.txt
return code == 1

# Successful application of an empty plan.
ak manifest apply empty.yaml
return code == 0
output equals ''

# Successful application of a full project.
ak manifest apply full.yaml
return code == 0
output equals file expected_on_full_apply.txt

# Check the actual project details.
ak project get my_project -J
return code == 0
output equals file expected_project_details.json

ak project get prj_00000000000000000000000001 -J
return code == 0
output equals file expected_project_details.json

# Check the actual connection details.
ak connection get my_project/my_connection -J
return code == 0
output equals file expected_connection_details.json

# TODO: Add more tests - either here, or in separate `.txtar` files:  
# - Specifying an env name  
# - This command's flags  
# - Other manifest commands since PR #6  
ak connection get con_00000000000000000000000003 -J
return code == 0
output equals file expected_connection_details.json

# Check the actual environment details.
ak env get my_project/default -J
return code == 0
output equals file expected_env_details.json

ak env get env_00000000000000000000000002 -J
return code == 0
output equals file expected_env_details.json

# Check the actual trigger details.
ak trigger get trg_00000000000000000000000004 -J
return code == 0
output equals file expected_trigger_details.json

ak manifest apply full.yaml --project-name their_project
return code == 0
output equals file expected_on_full_apply_their.txt

# Graceful handling of an manifest file with unknown integration.
ak manifest apply wrong_integration.yaml
output equals file wrong_integration_error.txt
return code == 1

# Set vars in one of the project
ak var set cat mew -p my_project -e default
return code == 0

ak var set dog woof -p my_project -e default
return code == 0

# Reapply the manifest
ak manifest apply full.yaml --project-name my_project
return code == 0
output equals file expected_on_full_reapply.txt

# Check that vars are properly modified.

# this value changes because manifest explicitly sets it.
ak var get cat -p my_project -e default
return code == 0
output equals 'cat="meow"'

# this value does not change since manifest does not specify a value for it.
ak var get dog -p my_project -e default
return code == 0
output equals 'dog="woof"'

-- invalid.yaml --
This is an invalid YAML file to trigger an error

-- invalid_error.txt --
Error: invalid YAML input: yaml: unmarshal errors:
  line 1: cannot unmarshal !!str `This is...` into manifest.Manifest

-- empty.yaml --
version: v1

-- wrong_integration.yaml --
version: v1

project:
  name: my_telepathy_project
  connections:
    - name: my_connection
      # This integration does not exist, obviously.
      integration: telepathy
  triggers:
    - name: read
      connection: my_connection
      event_type: read
      entrypoint: my_program.star:on_mind_read

-- wrong_integration_error.txt --
[plan] project "my_telepathy_project": not found, will create
[plan] connection "my_telepathy_project/my_connection": not found, will create
[plan] trigger "my_telepathy_project/default:my_telepathy_project/my_connection/read": not found, will create
[exec] create_project "my_telepathy_project": prj_00000000000000000000000009 created
Error: action create_connection my_telepathy_project/my_connection: integration "telepathy" not found

-- full.yaml --
version: v1

project:
  name: my_project
  vars:
    - name: cat
      value: meow
    - name: dog
      optional: true
  connections:
    - name: my_connection
      integration: http
  triggers:
    - name: get
      connection: my_connection
      event_type: get
      entrypoint: my_program.star:on_http_get

-- expected_on_full_apply.txt --
[plan] project "my_project": not found, will create
[plan] var "my_project/default/cat": not found, will set
[plan] var "my_project/default/dog": not found, will set
[plan] connection "my_project/my_connection": not found, will create
[plan] trigger "my_project/default:my_project/my_connection/get": not found, will create
[exec] create_project "my_project": prj_00000000000000000000000001 created
[exec] set_var "my_project/default/cat": env_00000000000000000000000002 updated
[exec] set_var "my_project/default/dog": env_00000000000000000000000002 updated
[exec] create_connection "my_project/my_connection": con_00000000000000000000000003 created
[exec] create_trigger "my_project/default:my_project/my_connection/get": trg_00000000000000000000000004 created

-- expected_on_full_reapply.txt --
[plan] project "my_project": found, id="prj_00000000000000000000000001"
[plan] project "my_project": no changes needed
[plan] env "my_project/default": found, id="env_00000000000000000000000002"
[plan] env "my_project/default": no changes needed
[plan] var "my_project/default/cat": differs, will set
[plan] var "my_project/default/dog": differs, will set
[plan] project "my_project": found 1 connections
[plan] connection "my_project/my_connection": no changes needed
[plan] project "my_project": found 1 triggers
[plan] trigger "my_project/default:my_project/my_connection/get": found, id="trg_00000000000000000000000004"
[plan] trigger "my_project/default:my_project/my_connection/get": no changes needed
[exec] set_var "my_project/default/cat": env_00000000000000000000000002 updated
[exec] set_var "my_project/default/dog": env_00000000000000000000000002 updated

-- expected_on_full_apply_their.txt --
[plan] project "their_project": not found, will create
[plan] var "their_project/default/cat": not found, will set
[plan] var "their_project/default/dog": not found, will set
[plan] connection "their_project/my_connection": not found, will create
[plan] trigger "their_project/default:their_project/my_connection/get": not found, will create
[exec] create_project "their_project": prj_00000000000000000000000005 created
[exec] set_var "their_project/default/cat": env_00000000000000000000000006 updated
[exec] set_var "their_project/default/dog": env_00000000000000000000000006 updated
[exec] create_connection "their_project/my_connection": con_00000000000000000000000007 created
[exec] create_trigger "their_project/default:their_project/my_connection/get": trg_00000000000000000000000008 created

-- expected_project_details.json --
{
  "project": {
    "project_id": "prj_00000000000000000000000001",
    "name": "my_project"
  }
}

-- expected_connection_details.json --
{
  "connection": {
    "connection_id": "con_00000000000000000000000003",
    "integration_id": "int_3kth00httpf1201a7ed83f7cd5",
    "project_id": "prj_00000000000000000000000001",
    "name": "my_connection",
    "status": {},
    "capabilities": {
      "supports_connection_init": true
    },
    "links": {
      "init_url": "/connections/con_00000000000000000000000003/init",
      "self_url": "/connections/con_00000000000000000000000003"
    }
  }
}

-- expected_env_details.json --
{
  "env": {
    "env_id": "env_00000000000000000000000002",
    "project_id": "prj_00000000000000000000000001",
    "name": "default"
  }
}

-- expected_trigger_details.json --
{
  "trigger": {
    "trigger_id": "trg_00000000000000000000000004",
    "name": "get",
    "connection_id": "con_00000000000000000000000003",
    "env_id": "env_00000000000000000000000002",
    "event_type": "get",
    "code_location": {
      "path": "my_program.star",
      "name": "on_http_get"
    }
  }
}
